--- a/terms.html
+++ b/terms.html
@@ -228,3 +228,7 @@ These Terms are provided by <b>Stonevia Commerce</b>, operating the ProfitPilot 
   </script>
 </body>
 </html>
+
+<div>
+Legal entity: <b>Stonevia Commerce</b>
+</div>
