--- a/faq.html
+++ b/faq.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProfitPilot — FAQ</title>
+  <title>ProfitPilot — Frequently Asked Questions</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Frequently asked questions about ProfitPilot pricing, free trial, PRO access, refunds, and how the calculator works.">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,46 +22,80 @@
 
     <section>
       <h2>General</h2>
-      <p><strong>Is ProfitPilot affiliated with eBay, Etsy, Amazon or any marketplace?</strong><br>
-      No. ProfitPilot is an independent profit and pricing calculator. Marketplace names are shown only for user reference.</p>
 
-      <p><strong>Is this financial or legal advice?</strong><br>
-      No. All outputs are estimates based on your inputs. Estimates are for decision-making purposes only — consult professionals if needed.</p>
+      <p>
+        <strong>Is ProfitPilot affiliated with eBay, Etsy, Amazon, or any marketplace?</strong><br>
+        No. ProfitPilot is an independent profit and pricing calculator. Marketplace names are used strictly for reference and familiarity. We are not endorsed by or connected to any marketplace.
+      </p>
 
-      <p><strong>Why do I need to log in?</strong><br>
-      Login links your trial and PRO status to your account and prevents abuse. You can use some tools without logging in, but PRO features require it.</p>
+      <p>
+        <strong>Is ProfitPilot providing financial or legal advice?</strong><br>
+        No. All calculations are estimates based on the data you enter. Results are intended to support pricing decisions only and should not be considered financial, legal, or tax advice.
+      </p>
+
+      <p>
+        <strong>Why do I need to log in?</strong><br>
+        Logging in securely links your trial and PRO access to your account and prevents abuse. Some basic tools may work without login, but PRO features require an account.
+      </p>
     </section>
 
     <section>
-      <h2>Free Trial & PRO</h2>
-      <p><strong>How does the free trial work?</strong><br>
-      You get a 5-day trial period. During trial some advanced features (e.g., reverse pricing, competitor mode, bulk) are limited.</p>
+      <h2>Free Trial & PRO Access</h2>
 
-      <p><strong>Is PRO a subscription?</strong><br>
-      No. PRO is a one-time purchase that unlocks unlimited access to all advanced features.</p>
+      <p>
+        <strong>How does the free trial work?</strong><br>
+        You receive a 5-day free trial. During the trial, advanced features such as reverse pricing, competitor mode, and bulk tools may be partially limited.
+      </p>
 
-      <p><strong>How do I unlock PRO after purchase?</strong><br>
-      After purchase, PRO access is automatically granted to your logged-in account. If you switch devices or log out, simply log back in — the app will recognise your PRO status.</p>
+      <p>
+        <strong>Is PRO a subscription?</strong><br>
+        No. PRO is a one-time purchase. Once unlocked, you get unlimited access to all current PRO features without recurring fees.
+      </p>
 
-      <p><strong>Why am I seeing an amount higher than the listed price at checkout?</strong><br>
-      Paddle, our payment partner, may add VAT/sales tax where required by law. Paddle handles all tax compliance automatically on your behalf. :contentReference[oaicite:0]{index=0}</p>
+      <p>
+        <strong>How do I unlock PRO after purchase?</strong><br>
+        PRO access is automatically applied to the account you were logged into at checkout. If you change devices or log out, simply sign back in and your PRO access will be restored.
+      </p>
+
+      <p>
+        <strong>Why is the checkout amount higher than the listed price?</strong><br>
+        Our payment provider may apply VAT or sales tax where required by law. This is handled automatically at checkout in compliance with local regulations.
+      </p>
+    </section>
+
+    <section>
+      <h2>Refunds & Returns</h2>
+
+      <p>
+        <strong>Do you offer refunds?</strong><br>
+        Yes. Refunds are handled in accordance with our official policy. Please review the full details on our
+        <a href="refunds.html">Refund Policy</a> page.
+      </p>
+
+      <p>
+        <strong>Why are refunds limited on digital products?</strong><br>
+        Because ProfitPilot is a digital tool with instant access, refunds are evaluated based on usage and eligibility criteria outlined in the Refund Policy.
+      </p>
     </section>
 
     <section>
       <h2>Using the App</h2>
-      <p><strong>What features are included in the free version?</strong><br>
-      The free version includes basic profit and margin calculation and a short trial of advanced modes. Full features require PRO.</p>
 
-      <p><strong>Can I see reviews without logging in?</strong><br>
-      Yes. The Reviews page is public. Login is required to submit a review.</p>
+      <p>
+        <strong>What features are included in the free version?</strong><br>
+        The free version includes basic profit and margin calculations along with a short preview of advanced modes. Full functionality requires PRO access.
+      </p>
 
-      <p><strong>Still stuck?</strong><br>
-      Email <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a> and we’ll help.</p>
+      <p>
+        <strong>Can I view reviews without logging in?</strong><br>
+        Yes. The Reviews page is publicly accessible. Logging in is only required to submit a review.
+      </p>
+
+      <p>
+        <strong>Still need help?</strong><br>
+        Contact us at <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a> and we’ll respond as quickly as possible.
+      </p>
     </section>
   </main>
 
-  <footer>
-    © ProfitPilot • Estimated results only.
-  </footer>
-</body>
-</html>
+  <foote
