--- a/login.html
+++ b/login.html
@@ -3,223 +3,91 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Login — ProfitPilot</title>
+  <title>Log in — ProfitPilot</title>
   <meta name="robots" content="noindex,nofollow">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
 
   <style>
-    :root{--bg:#0b0f14;--card:#111826;--card2:#0e1521;--txt:#eaf0ff;--muted:#9aa7bd;--line:rgba(255,255,255,.08);--accent:#5eead4;}
+    :root{
+      --bg:#0b0f14;
+      --card:#111826;
+      --card2:#0e1521;
+      --txt:#eaf0ff;
+      --muted:#9aa7bd;
+      --line:rgba(255,255,255,.10);
+      --accent:#5eead4;
+      --accent2:#60a5fa;
+      --danger:#fb7185;
+      --ok:#34d399;
+    }
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui;background:var(--bg);color:var(--txt)}
-    .wrap{max-width:520px;margin:40px auto;padding:0 14px}
-    .card{
-      background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
-      border:1px solid var(--line);border-radius:18px;padding:20px
-    }
-    h2{margin:0 0 10px}
-    input{width:100%;padding:12px;border-radius:14px;border:1px solid var(--line);background:var(--card2);color:var(--txt);outline:none}
-    input:focus{border-color:rgba(94,234,212,.35)}
-    label{font-size:12px;color:var(--muted);margin-top:14px;display:block}
-    .btn{
-      width:100%;margin-top:14px;padding:12px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.1);
-      background:rgba(255,255,255,.03);color:var(--txt);cursor:pointer
-    }
-    .btn.primary{background:rgba(94,234,212,.12);border-color:rgba(94,234,212,.35)}
-    .small{font-size:12px;color:var(--muted);margin-top:12px;line-height:1.5}
+    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--txt)}
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
+    :focus-visible{outline:3px solid rgba(96,165,250,.55);outline-offset:3px;border-radius:10px}
 
-    /* PROFITPILOT NAV (single, clean) */
-    .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:50}
-    .pp-nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-    .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-    .pp-btn{
-      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
-      background:rgba(255,255,255,.06);font-weight:800;text-decoration:none;color:rgba(255,255,255,.92);
-      display:inline-flex;gap:8px;align-items:center;
-      transition:transform .08s ease;
+    .wrap{max-width:560px;margin:34px auto;padding:0 14px}
+    .card{
+      background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
+      border:1px solid var(--line);
+      border-radius:18px;
+      padding:20px;
+      box-shadow:0 16px 44px rgba(0,0,0,.35);
     }
-    .pp-btn:hover{transform:translateY(-1px)}
-    .pp-btn:active{transform:translateY(0)}
-    .pp-primary{
-      border:none;color:#0b1220;
-      background:linear-gradient(135deg,#5eead4,#60a5fa);
+    h1{margin:0 0 10px;font-size:22px;letter-spacing:-.02em}
+    .subtitle{margin:0 0 14px;color:var(--muted);font-size:13px;line-height:1.6}
+
+    label{font-size:12px;color:var(--muted);margin-top:14px;display:block}
+    .field{position:relative}
+    input{
+      width:100%;
+      padding:12px 44px 12px 12px;
+      border-radius:14px;
+      border:1px solid var(--line);
+      background:var(--card2);
+      color:var(--txt);
+      outline:none;
+    }
+    input:focus{border-color:rgba(94,234,212,.35)}
+    .iconbtn{
+      position:absolute;right:8px;top:50%;
+      transform:translateY(-50%);
+      border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.88);
+      border-radius:12px;
+      padding:8px 10px;
+      cursor:pointer;
+      font-weight:800;
+      font-size:12px;
+    }
+    .iconbtn:hover{filter:brightness(1.1)}
+    .row{
+      display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;
+      margin-top:10px;align-items:center;
+    }
+
+    .btn{
+      width:100%;
+      margin-top:14px;
+      padding:12px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.12);
+      background:rgba(255,255,255,.05);
+      color:var(--txt);
+      cursor:pointer;
+      font-weight:900;
+      transition:transform .08s ease, filter .08s ease;
+    }
+    .btn:hover{transform:translateY(-1px)}
+    .btn:active{transform:translateY(0)}
+    .btn.primary{
+      border:none;
+      color:#0b1220;
+      background:linear-gradient(135deg,var(--accent),var(--accent2));
       box-shadow:0 14px 28px rgba(96,165,250,.18);
     }
-    .pp-active{
-      border-color:rgba(94,234,212,.35);
-      background:rgba(94,234,212,.10);
-    }
-    .pp-user{
-      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
-      background:rgba(255,255,255,.06);
-      color:rgba(255,255,255,.80);
-      font-weight:800;
-      display:none;
-      max-width:260px;
-      overflow:hidden;text-overflow:ellipsis;
-      white-space:nowrap;
-    }
-    .pp-crumbs{
-      margin-top:10px;
-      font-size:12.5px;
-      color:rgba(255,255,255,.70);
-      display:flex;gap:6px;flex-wrap:wrap;align-items:center;
-    }
-    .pp-crumbs a{color:rgba(94,234,212,.95);font-weight:800;text-decoration:none}
-    .pp-sep{opacity:.55}
-  </style>
-</head>
+    .btn:disabled{opacity:.55;cursor:not-allowed;transform:none}
 
-<body>
-
-  <!-- SINGLE NAV (no duplicates) -->
-  <div class="pp-navwrap" role="navigation" aria-label="Primary">
-    <div class="pp-nav">
-      <div class="pp-left">
-        <a class="pp-btn" href="https://ukwebtools.com/">← Ukwebtools</a>
-        <a class="pp-btn" href="index.html">Home</a>
-        <a class="pp-btn" href="reviews.html">Reviews</a>
-        <a class="pp-btn" href="privacy.html">Privacy</a>
-        <a class="pp-btn" href="terms.html">Terms</a>
-        <a class="pp-btn" href="faq.html">FAQ</a>
-      </div>
-
-      <div class="pp-right">
-        <span class="pp-user" id="ppUserChip">Signed in</span>
-
-        <!-- Signed OUT -->
-        <a class="pp-btn pp-active" id="ppLoginBtn" href="login.html">Log in</a>
-        <a class="pp-btn pp-primary" id="ppSignupBtn" href="signup.html">Sign up</a>
-
-        <!-- Signed IN -->
-        <a class="pp-btn pp-primary" id="ppOpenBtn" href="app.html" style="display:none">Open app</a>
-        <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
-      </div>
-    </div>
-
-    <div class="pp-crumbs" aria-label="Breadcrumb">
-      <a href="https://ukwebtools.com/">Ukwebtools</a>
-      <span class="pp-sep">›</span>
-      <a href="index.html">ProfitPilot</a>
-      <span class="pp-sep">›</span>
-      <span>Log in</span>
-    </div>
-
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@type":"BreadcrumbList",
-      "itemListElement":[
-        {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
-        {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
-        {"@type":"ListItem","position":3,"name":"Log in","item":"https://profitpilot.ukwebtools.com/login.html"}
-      ]
-    }
-    </script>
-  </div>
-
-  <div class="wrap">
-    <div class="card">
-      <h2>ProfitPilot</h2>
-      <p class="small">Log in to your account.</p>
-
-      <label>Email</label>
-      <input id="email" type="email" placeholder="you@example.com" autocomplete="email">
-
-      <label>Password</label>
-      <input id="password" type="password" placeholder="••••••••" autocomplete="current-password">
-
-      <button class="btn primary" id="login">Log in</button>
-      <a class="btn" href="signup.html" style="display:block;text-align:center">Create account</a>
-
-      <div class="small" style="margin-top:10px">
-        <a href="reset.html">Forgot password?</a>
-      </div>
-
-      <div class="small" id="msg">—</div>
-
-      <div class="small" style="margin-top:10px">
-        <a href="index.html">← Back to home</a> • <a href="https://ukwebtools.com/">Ukwebtools</a>
-      </div>
-    </div>
-  </div>
-
-<script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
-
-  const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
-  const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
-  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
-
-  const msg = document.getElementById("msg");
-  const emailEl = document.getElementById("email");
-  const passwordEl = document.getElementById("password");
-
-  function setMsg(text){ msg.textContent = text; }
-
-  // NAV auth UI
-  const userChip = document.getElementById("ppUserChip");
-  const loginBtn = document.getElementById("ppLoginBtn");
-  const signupBtn = document.getElementById("ppSignupBtn");
-  const openBtn = document.getElementById("ppOpenBtn");
-  const logoutBtn = document.getElementById("ppLogoutBtn");
-
-  async function refreshAuthUI(){
-    const { data: { session } } = await supabase.auth.getSession();
-    if (session?.user?.email){
-      userChip.style.display = "inline-flex";
-      userChip.textContent = session.user.email;
-
-      loginBtn.style.display = "none";
-      signupBtn.style.display = "none";
-
-      openBtn.style.display = "inline-flex";
-      logoutBtn.style.display = "inline-flex";
-    } else {
-      userChip.style.display = "none";
-
-      loginBtn.style.display = "inline-flex";
-      signupBtn.style.display = "inline-flex";
-
-      openBtn.style.display = "none";
-      logoutBtn.style.display = "none";
-    }
-  }
-
-  logoutBtn.addEventListener("click", async (e)=>{
-    e.preventDefault();
-    await supabase.auth.signOut();
-    location.href = "login.html";
-  });
-
-  // If already signed in, go to app
-  const { data: { session } } = await supabase.auth.getSession();
-  if (session?.user){ location.href = "app.html"; }
-
-  await refreshAuthUI();
-  supabase.auth.onAuthStateChange(() => refreshAuthUI());
-
-  // Login
-  document.getElementById("login").addEventListener("click", async () => {
-    const email = emailEl.value.trim();
-    const password = passwordEl.value;
-
-    if (!email) { setMsg("Please enter your email."); return; }
-    if (!password) { setMsg("Please enter your password."); return; }
-
-    setMsg("Logging in…");
-
-    const { error } = await supabase.auth.signInWithPassword({ email, password });
-
-    if (error) {
-      setMsg(error.message);
-      return;
-    }
-
-    location.href = "app.html";
-  });
-</script>
-</body>
-</html>
+    .note{font-size:12px;color:var(--muted);margin-top:12px;line-height:1.6}
+    .m
