--- a/pricing.html
+++ b/pricing.html
@@ -4,9 +4,16 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Pricing — ProfitPilot</title>
-  <meta name="description" content="ProfitPilot pricing: start with a free trial, upgrade to PRO with a one-time purchase via Paddle. No subscriptions.">
+  <meta name="description" content="ProfitPilot pricing: start with a free trial, upgrade to PRO with a one-time purchase. No subscriptions.">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <meta name="robots" content="index,follow">
+  <link rel="canonical" href="https://profitpilot.ukwebtools.com/pricing.html">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Pricing — ProfitPilot">
+  <meta property="og:description" content="Start with a free trial. Upgrade to PRO with a one-time purchase. No subscriptions.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://profitpilot.ukwebtools.com/pricing.html">
 
   <style>
     :root{
@@ -15,12 +22,11 @@
       --card:rgba(255,255,255,.92); --line:rgba(16,24,40,.10);
       --accent:#0ea5a4; --accent2:#4f46e5;
       --shadow:0 12px 34px rgba(16,24,40,.10);
-      --soft:rgba(14,165,164,.10);
-      --soft2:rgba(79,70,229,.10);
       --warn:rgba(245,158,11,.14);
       --ok:rgba(14,165,164,.14);
     }
     *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
     body{
       margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--txt);
       background:
@@ -30,14 +36,18 @@
     }
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
+    :focus-visible{outline:3px solid rgba(79,70,229,.55);outline-offset:3px;border-radius:10px}
+
     .wrap{max-width:1120px;margin:0 auto;padding:22px 16px 74px}
     @media (min-width:900px){.wrap{padding:26px 22px 88px}}
 
     /* NAV */
+    header{position:sticky;top:0;z-index:60}
     .nav{
       display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;
-      position:sticky;top:0;z-index:60;padding:14px 0;
+      padding:14px 0;
       backdrop-filter:blur(10px);
+      position:relative;
     }
     .nav::before{
       content:"";position:absolute;inset:0;
@@ -65,8 +75,9 @@
       display:inline-flex;gap:8px;align-items:center;cursor:pointer;
       box-shadow:0 8px 18px rgba(16,24,40,.06);
       white-space:nowrap;font-weight:900;
+      transition:transform .12s ease;
     }
-    .btn:hover{transform:translateY(-1px)}
+    .btn:hover{transform:translateY(-1px);text-decoration:none}
     .btn:active{transform:translateY(0)}
     .btn.ghost{background:transparent;box-shadow:none}
     .btn.primary{
@@ -82,6 +93,7 @@
       padding:9px 12px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
       background:rgba(255,255,255,.76);color:rgba(16,24,40,.72);
       font-size:12px;font-weight:900;display:none;
+      max-width:260px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;
     }
 
     /* BREADCRUMBS */
@@ -103,8 +115,15 @@
       padding:20px;
       position:relative; overflow:hidden;
     }
+    .hero::after{
+      content:"";position:absolute;inset:-50px -70px auto auto;width:280px;height:280px;border-radius:999px;
+      background:radial-gradient(circle at 30% 30%, rgba(14,165,164,.18), transparent 60%),
+                 radial-gradient(circle at 70% 70%, rgba(79,70,229,.18), transparent 60%);
+      filter:blur(2px);
+      pointer-events:none;
+    }
     h1{margin:0;font-size:28px;line-height:1.15;letter-spacing:-.03em;font-weight:1000}
-    .lead{margin-top:10px;color:rgba(16,24,40,.70);line-height:1.7;font-size:14.5px}
+    .lead{margin-top:10px;color:rgba(16,24,40,.70);line-height:1.7;font-size:14.5px;max-width:78ch}
     .pillrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
     .pill{
       padding:9px 12px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
@@ -168,13 +187,19 @@
     }
     summary{cursor:pointer;font-weight:1000}
     details p{margin:10px 0 0;color:rgba(16,24,40,.68);line-height:1.7;font-size:13px}
+
     footer{
       margin-top:18px;color:rgba(16,24,40,.58);
       font-size:12.5px;line-height:1.7;
     }
+
+    @media (prefers-reduced-motion: reduce){
+      html{scroll-behavior:auto}
+      .btn{transition:none}
+      .btn:hover{transform:none}
+    }
   </style>
 
-  <!-- SEO Breadcrumb JSON-LD -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -186,39 +211,37 @@
     ]
   }
   </script>
-
-  <!-- Optional: Paddle (keep commented until you add Paddle) -->
-  <!--
-  <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
-  -->
 </head>
 
 <body>
   <div class="wrap">
 
     <!-- NAV -->
-    <div class="nav" role="navigation" aria-label="Primary">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">UK</div>
-        <div>
-          <div><b>ProfitPilot</b></div>
-          <div class="sub">Pricing</div>
+    <header>
+      <nav class="nav" aria-label="Primary">
+        <div class="brand">
+          <div class="logo" aria-hidden="true">UK</div>
+          <div>
+            <div><b>ProfitPilot</b></div>
+            <div class="sub">Pricing</div>
+          </div>
         </div>
-      </div>
 
-      <div class="right">
-        <a class="btn ghost" href="https://ukwebtools.com/">← Ukwebtools</a>
-        <a class="btn" href="index.html">Home</a>
-        <a class="btn" href="reviews.html">Reviews</a>
-        <a class="btn" href="help.html">How to use</a>
-        <a class="btn" href="privacy.html">Privacy</a>
-        <a class="btn" href="terms.html">Terms</a>
-        <a class="btn active" href="pricing.html">Pricing</a>
-        <span class="chip" id="userChip">—</span>
-        <a class="btn primary" id="openBtn" href="login.html">Start free trial</a>
-        <a class="btn" id="logoutBtn" href="#" style="display:none">Log out</a>
-      </div>
-    </div>
+        <div class="right">
+          <a class="btn ghost" href="https://ukwebtools.com/" rel="nofollow">← Ukwebtools</a>
+          <a class="btn" href="index.html">Home</a>
+          <a class="btn" href="reviews.html">Reviews</a>
+          <a class="btn" href="help.html">How to use</a>
+          <a class="btn" href="faq.html">FAQ</a>
+          <a class="btn" href="privacy.html">Privacy</a>
+          <a class="btn" href="terms.html">Terms</a>
+          <a class="btn active" href="pricing.html" aria-current="page">Pricing</a>
+          <span class="chip" id="userChip">—</span>
+          <a class="btn primary" id="openBtn" href="login.html">Start free trial</a>
+          <a class="btn" id="logoutBtn" href="#" style="display:none">Log out</a>
+        </div>
+      </nav>
+    </header>
 
     <div class="crumbs" aria-label="Breadcrumb">
       <a href="https://ukwebtools.com/">Ukwebtools</a>
@@ -229,21 +252,21 @@
     </div>
 
     <!-- HERO -->
-    <div class="hero">
+    <section class="hero" aria-label="Pricing intro">
       <h1>Simple pricing. No subscriptions.</h1>
       <div class="lead">
         Start with a <b>free trial</b>. When you’re ready, upgrade to <b>PRO</b> with a one-time purchase.
-        Paddle handles VAT/taxes and issues receipts.
+        Taxes/VAT may be added at checkout where required by law.
       </div>
-      <div class="pillrow">
+      <div class="pillrow" aria-label="Highlights">
         <span class="pill">Instant access</span>
-        <span class="pill">VAT/tax receipts via Paddle</span>
-        <span class="pill">Cancel nothing (one-time)</span>
+        <span class="pill">One-time unlock</span>
+        <span class="pill">No subscriptions</span>
       </div>
-    </div>
+    </section>
 
-    <!-- PRICING CARDS -->
-    <div class="grid">
+    <!-- PRICING -->
+    <section class="grid" aria-label="Plans">
 
       <!-- Trial -->
       <div class="card">
@@ -254,7 +277,7 @@
         <div class="per">5 days</div>
 
         <ul>
-          <li>Profit calculator</li>
+          <li>Profit calculator (unlimited)</li>
           <li>Manual + example presets</li>
           <li>Bulk table (trial limits)</li>
           <li>Reverse pricing (trial limits)</li>
@@ -267,184 +290,4 @@
         </div>
 
         <div class="hr"></div>
-        <div class="small">
-          Trial is designed to help you validate the tool before upgrading.
-        </div>
-      </div>
-
-      <!-- PRO -->
-      <div class="card featured">
-        <span class="tag best">Best value</span>
-        <div class="kicker">PRO</div>
-        <div class="title">One-time unlock</div>
-        <div class="price" id="proPrice">£9.99</div>
-        <div class="per">one-time • lifetime access</div>
-
-        <ul>
-          <li><b>Unlimited</b> reverse pricing</li>
-          <li><b>Unlimited</b> bulk rows + runs</li>
-          <li><b>Unlimited</b> competitor mode</li>
-          <li>Insights panel (break-even, margin targets)</li>
-          <li>PDF export + share links</li>
-          <li>Save scenarios (device)</li>
-        </ul>
-
-        <div class="cta">
-          <button class="btn primary" id="buyProBtn">Buy PRO (Paddle)</button>
-          <a class="btn" href="reviews.html">See reviews</a>
-        </div>
-
-        <div class="hr"></div>
-        <div class="small">
-          Paddle shows final taxes/VAT at checkout and emails your receipt.
-        </div>
-      </div>
-
-      <!-- Optional: PRO+ -->
-      <div class="card">
-        <span class="tag">Optional</span>
-        <div class="kicker">PRO+</div>
-        <div class="title">Founder support</div>
-        <div class="price" id="proPlusPrice">£19.99</div>
-        <div class="per">one-time</div>
-
-        <ul>
-          <li>Everything in PRO</li>
-          <li>Priority support (email)</li>
-          <li>Feature request vote</li>
-          <li>Early access to new tools</li>
-        </ul>
-
-        <div class="cta">
-          <button class="btn primary" id="buyProPlusBtn">Buy PRO+ (Paddle)</button>
-          <a class="btn" href="help.html">Compare</a>
-        </div>
-
-        <div class="hr"></div>
-        <div class="small">
-          Keep this plan only if you truly want it. Otherwise, delete the entire PRO+ card.
-        </div>
-      </div>
-
-    </div>
-
-    <!-- TRUST + FAQ -->
-    <div class="two">
-
-      <div class="note">
-        <div class="kicker">Checkout</div>
-        <div class="title">Why Paddle</div>
-        <div class="small">
-          Paddle is a merchant of record in many regions, which improves buyer trust:
-        </div>
-        <ul>
-          <li>Handles VAT/taxes where applicable</li>
-          <li>Secure payment processing</li>
-          <li>Receipts sent automatically</li>
-        </ul>
-        <div class="hr"></div>
-        <div class="small">
-          After purchase, your account will be upgraded to PRO (or you’ll be shown the next step to unlock instantly).
-        </div>
-      </div>
-
-      <div class="note">
-        <div class="kicker">FAQ</div>
-        <div class="title">Quick answers</div>
-
-        <details open>
-          <summary>Is this a subscription?</summary>
-          <p>No. PRO is a one-time payment for lifetime access.</p>
-        </details>
-
-        <details>
-          <summary>Do you charge VAT?</summary>
-          <p>Paddle calculates and applies any taxes/VAT required based on your location during checkout.</p>
-        </details>
-
-        <details>
-          <summary>Do you guarantee profits?</summary>
-          <p>No. ProfitPilot is an estimates tool based on the data you enter. It’s decision support, not a guarantee.</p>
-        </details>
-
-      </div>
-
-    </div>
-
-    <footer>
-      <div class="hr"></div>
-      <div><b>Independent tool:</b> ProfitPilot is not affiliated with or endorsed by any marketplace, platform, or payment provider.</div>
-      <div><b>Estimates only:</b> outputs depend on your inputs and assumptions; no profit guarantees. Not financial/legal/tax advice.</div>
-      <div style="margin-top:6px">© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
-    </footer>
-
-  </div>
-
-<script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
-
-  // Supabase (for showing email + logout nicely)
-  const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
-  const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
-  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
-
-  // ✅ Paddle checkout links (FASTEST way)
-  // Replace these with your real Paddle Checkout URLs.
-  const PADDLE_PRO_URL = "PASTE_PADDLE_CHECKOUT_URL_FOR_PRO";
-  const PADDLE_PROPLUS_URL = "PASTE_PADDLE_CHECKOUT_URL_FOR_PROPLUS";
-
-  document.getElementById("yr").textContent = new Date().getFullYear();
-
-  // Buy buttons (link checkout approach)
-  const buyProBtn = document.getElementById("buyProBtn");
-  const buyProPlusBtn = document.getElementById("buyProPlusBtn");
-
-  buyProBtn.addEventListener("click", ()=>{
-    if (!PADDLE_PRO_URL || PADDLE_PRO_URL.includes("PASTE_")){
-      alert("Add your Paddle PRO checkout URL in pricing.html (PADDLE_PRO_URL).");
-      return;
-    }
-    location.href = PADDLE_PRO_URL;
-  });
-
-  buyProPlusBtn.addEventListener("click", ()=>{
-    if (!PADDLE_PROPLUS_URL || PADDLE_PROPLUS_URL.includes("PASTE_")){
-      alert("Add your Paddle PRO+ checkout URL in pricing.html (PADDLE_PROPLUS_URL).");
-      return;
-    }
-    location.href = PADDLE_PROPLUS_URL;
-  });
-
-  // Auth chip + CTAs
-  const userChip = document.getElementById("userChip");
-  const openBtn = document.getElementById("openBtn");
-  const logoutBtn = document.getElementById("logoutBtn");
-
-  async function refreshAuthUI(){
-    const { data: { session } } = await supabase.auth.getSession();
-    if (session?.user?.email){
-      userChip.style.display = "inline-flex";
-      userChip.textContent = session.user.email;
-      openBtn.textContent = "Open app";
-      openBtn.href = "app.html";
-      logoutBtn.style.display = "inline-flex";
-    } else {
-      userChip.style.display = "none";
-      openBtn.textContent = "Start free trial";
-      openBtn.href = "login.html";
-      logoutBtn.style.display = "none";
-    }
-  }
-  logoutBtn.addEventListener("click", async (e)=>{
-    e.preventDefault();
-    await supabase.auth.signOut();
-    location.href = "pricing.html";
-  });
-
-  await refreshAuthUI();
-  supabase.auth.onAuthStateChange(()=>refreshAuthUI());
-</script>
-</body>
-</html>
-
-<a href="refunds.html">Refund Policy</a>
+        <div class="small">Trial is designed to help you validate before upgrading.</div>
